# xnet

./: .dockerignore  .editorconfig  .gitignore  .markdownlintrc.json  Cargo.toml  LICENSE  README.md  bit  kot  my_node_key.txt  original_spec.json  package-lock.json  package.json  rustfmt.toml  test_vesting.rs  whitepaper.md  xnet_spec.json  xnet_spec_raw.json  xnetx_raw.json  xnetx_spec.json
.cargo/: config.toml
.config/: nextest.toml
.github/: CHAOS_ENGINEERING.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVNET_GUIDE.md  DOCKER_GUIDE.md  FUNDING.yml  SECURITY.md  SMART_CONTRACT_SECURITY.md  dependabot.yml  pr-custom-review.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug.yaml  bug_report.yml  config.yml  documentation.yaml  feature.yaml  feature_request.yml  grant_proposal.yml  performance.yaml  rfc.yml  security.yaml
.github/workflows/: CI.yml  auto-label-issues.yml  benchmark.yml  burnin-label-notification.yml  chain-migration.yml  chaos-engineering.yml  check-D-labels.yml  check-labels.yml  ci.yml  coverage.yml  dependency-updates.yml  docker-multi-arch.yml  ephemeral-devnet.yml  lint-docs.yml  md-link-check.yml  mlc_config.json  monthly-tag.yml  pr-custom-review.yml  release-bot.yml  release-tagging.yml  release.yml  security-audit.yml  smart-contract-security.yml
client/allocator/: Cargo.toml
client/api/: Cargo.toml
client/authority-discovery/: Cargo.toml  build.rs
client/basic-authorship/: Cargo.toml
client/block-builder/: Cargo.toml
client/chain-spec/: Cargo.toml
client/cli/: Cargo.toml
client/db/: Cargo.toml
client/executor/: Cargo.toml
client/informant/: Cargo.toml
client/keystore/: Cargo.toml
client/merkle-mountain-range/: Cargo.toml
client/network/: Cargo.toml
client/network-gossip/: Cargo.toml
client/offchain/: Cargo.toml
client/proposer-metrics/: Cargo.toml
client/rpc/: Cargo.toml
client/rpc-api/: Cargo.toml
client/rpc-servers/: Cargo.toml
client/rpc-spec-v2/: Cargo.toml
client/service/: Cargo.toml
client/state-db/: Cargo.toml
client/statement-store/: Cargo.toml
client/storage-monitor/: Cargo.toml
client/sync-state-rpc/: Cargo.toml
client/sysinfo/: Cargo.toml  build.rs
client/telemetry/: Cargo.toml
client/tracing/: Cargo.toml
client/transaction-pool/: Cargo.toml
client/utils/: Cargo.toml
docker/: .dockerignore  Dockerfile.xnet-full  Dockerfile.xnet-node  docker-compose.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  STYLE_GUIDE.md  WHITEPAPER.md  build.md  environment-setup.md
frame/alliance/: Cargo.toml
frame/asset-conversion/: Cargo.toml
frame/asset-rate/: Cargo.toml
frame/assets/: Cargo.toml
frame/atomic-swap/: Cargo.toml
frame/aura/: Cargo.toml
frame/authority-discovery/: Cargo.toml
frame/authorship/: Cargo.toml
frame/babe/: Cargo.toml
frame/bags-list/: Cargo.toml
frame/balances/: Cargo.toml
frame/beefy/: Cargo.toml
frame/beefy-mmr/: Cargo.toml
frame/benchmarking/: Cargo.toml
frame/bounties/: Cargo.toml
frame/broker/: Cargo.toml
frame/child-bounties/: Cargo.toml
frame/collective/: Cargo.toml
frame/contracts/: Cargo.toml  build.rs  foundry.toml
frame/conviction-voting/: Cargo.toml
frame/core-fellowship/: Cargo.toml
frame/democracy/: Cargo.toml
frame/election-provider-multi-phase/: Cargo.toml
frame/election-provider-support/: Cargo.toml
frame/elections-phragmen/: Cargo.toml
frame/examples/: Cargo.toml
frame/executive/: Cargo.toml
frame/fast-unstake/: Cargo.toml
frame/glutton/: Cargo.toml
frame/grandpa/: Cargo.toml
frame/identity/: Cargo.toml
frame/im-online/: Cargo.toml
frame/indices/: Cargo.toml
frame/insecure-randomness-collective-flip/: Cargo.toml
frame/lottery/: Cargo.toml
frame/membership/: Cargo.toml
frame/merkle-mountain-range/: Cargo.toml
frame/message-queue/: Cargo.toml
frame/multisig/: Cargo.toml
frame/nft-fractionalization/: Cargo.toml
frame/nfts/: Cargo.toml
frame/nicks/: Cargo.toml
frame/nis/: Cargo.toml
frame/node-authorization/: Cargo.toml
frame/nomination-pools/: Cargo.toml
frame/offences/: Cargo.toml
frame/paged-list/: Cargo.toml
frame/preimage/: Cargo.toml
frame/proxy/: Cargo.toml
frame/ranked-collective/: Cargo.toml
frame/recovery/: Cargo.toml
frame/referenda/: Cargo.toml
frame/remark/: Cargo.toml
frame/root-offences/: Cargo.toml
frame/root-testing/: Cargo.toml
frame/safe-mode/: Cargo.toml
frame/salary/: Cargo.toml
frame/scheduler/: Cargo.toml
frame/scored-pool/: Cargo.toml
frame/session/: Cargo.toml
frame/society/: Cargo.toml
frame/staking/: Cargo.toml
frame/state-trie-migration/: Cargo.toml
frame/statement/: Cargo.toml
frame/sudo/: Cargo.toml
frame/support/: Cargo.toml
frame/system/: Cargo.toml
frame/timestamp/: Cargo.toml
frame/tips/: Cargo.toml
frame/transaction-payment/: Cargo.toml
frame/transaction-storage/: Cargo.toml
frame/treasury/: Cargo.toml
frame/try-runtime/: Cargo.toml
frame/tx-pause/: Cargo.toml
frame/uniques/: Cargo.toml
frame/utility/: Cargo.toml
frame/vesting/: Cargo.toml
frame/whitelist/: Cargo.toml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/block-rewards/: Cargo.toml
pallets/block-rewards/src/: lib.rs  mock.rs  tests.rs
pallets/zk-verifier/: Cargo.toml
pallets/zk-verifier/src/: lib.rs  mock.rs  tests.rs  weights.rs
primitives/api/: Cargo.toml
primitives/application-crypto/: Cargo.toml
primitives/arithmetic/: Cargo.toml
primitives/authority-discovery/: Cargo.toml
primitives/block-builder/: Cargo.toml
primitives/blockchain/: Cargo.toml
primitives/core/: Cargo.toml
primitives/database/: Cargo.toml
primitives/database/src/: error.rs  kvdb.rs  lib.rs  mem.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  mock.rs  precompiles.rs  tests.rs
src/: lib.rs
test-utils/: Cargo.toml
xnet-privacy-contracts/: DEPLOY_GUIDE.md  deployed_addresses.json  hardhat.config.js  package-lock.json  package.json
xnet_wasm/: Cargo.toml  lib.rs
(+1845 files in other folders)
